--- a/style.css
+++ b/style.css
@@ -89,3 +89,11 @@ a {
 a :hover {
  color: #f77f00;  
 }
+#peteContact {
+  text-align: left;
+  list-style-position: inside;
+}
+
+footer {
+  text-align: center;
+}
